<resources>
    <string name="app_name">My Notes</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="input_the_code_sent_to_mail">Input the code sent to mail</string>
    <string name="registration_form">Registration Form</string>
    <string name="already_have_account_click_here_to">Already have account? Click to</string>
    <string name="log_in">Log In</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="login">LOGIN</string>

    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">hello string lorem</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="other_menu">Other Menu</string>
    <string name="home">Home</string>
    <string name="main_menu">Main Menu</string>
    <string name="settings">Settings</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>

    <string name="user_button">User Button</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type Note Here</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>

</resources>