<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_form"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/text_boarder"
        android:hint="Username"


        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/text_boarder"
        android:hint="Email" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/text_boarder"
        android:hint="Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etConfirmationCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/text_boarder"
        android:hint="Confirmation Code"
        android:visibility="gone" /> <!-- Initially hidden -->

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="Confirm"
        android:visibility="gone"
        /> <!-- Initially hidden -->

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="Register" />


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account_click_here_to"
            android:textSize="15sp"
            android:layout_margin="5dp"
            />


        <Button
            android:id="@+id/R_login"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/log_in"

            />

    </LinearLayout>









</LinearLayout>
